--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 :root{
     --cor-de-fundo:#680552;
+   --amarelo: #e5ff00;
+   --branco:#fff;
 }
+
 body{
+background-color: var(--cor-de-fundo);
+}
+
+h1{
+    background-color: var(--branco);
+}
